--- a/themes/maupassant/_config.yml
+++ b/themes/maupassant/_config.yml
@@ -122,20 +122,20 @@ widgets: ## Seven widgets in sidebar provided: search, info, category, tag, rece
   - tag
   - recent_posts
   - recent_comments
-  - links
+  #- links
 
 info:
-  avatar: /img/avatar.png
-  discription: To be a better man.
+  avatar: /img/avatar.jpg
+  discription: 向上
   outlinkitem:
     - name: twitter
-      outlink: https://twitter.com/username
+      outlink: https://twitter.com/zsh
       message: Twitter
     - name: envelope
-      outlink: mailto:admin@domain.com
+      outlink: mailto:3313753189@qq.com
       message: Email
     - name: github
-      outlink: https://github.com/username
+      outlink: https://github.com/zsh0226
       message: Github
     - name: rss
       outlink: /atom.xml
